# pharmatalent-lead-discovery

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  mcp.json  pyproject.toml  requirements.txt
docs/: adr-001-supabase-schema.md  adr-002-people-search-budget.md
fixtures/: sample_apify_jobs.json  sample_hm_validation_prompt.md  sample_people_search.json
output/: .gitignore  active_client_hiring.csv  icp_fit_decisions.csv  run_summary.json
pipeline/: __init__.py  __main__.py  config.py  icp.py  logging_setup.py  matching.py  models.py  normalize.py  outputs.py  run.py
pipeline/clients/: __init__.py  apify.py  http.py  openrouter.py  people_search.py  store.py
pipeline/stages/: __init__.py  dmm.py  exclude.py  fitcheck.py  scrape.py  validate.py
sql/: schema.sql
tests/: test_matching.py  test_normalize.py  test_pipeline_fixtures.py  test_validate.py
